Begin Infinispan support. Add AbstractEntityView to viewframework

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -122,6 +122,20 @@ subsys_deploymentscanner_autoDeployZipped=Auto-deploy Zipped
 subsys_deploymentscanner_autoDeployExploded=Auto-deploy Exploded
 subsys_deploymentscanner_deploymentTimeout=Deployment Timeout (sec)
 
+subsys_infinispan_cache_container=Cache Container
+subsys_infinispan_cache_containers=Cache Containers
+subsys_infinispan_default_cache=Default Cache
+subsys_infinispan_jndiName=JNDI Name
+subsys_infinispan_listenerExecutor=Listener Executor
+subsys_infinispan_evictionExecutor=Eviction Executor
+subsys_infinispan_replicationQueueExecutor=Replication Queue Executor
+subsys_infinispan_isolation=Isolation
+subsys_infinispan_striping=Striping
+subsys_infinispan_aquireTimeout=Aquire Timeout (ms)
+subsys_infinispan_concurrencyLevel=Concurrency Level
+subsys_infinispan_evictionStrategy=Eviction Strategy
+
+
 subsys_naming_jndiView=JNDI View
 subsys_naming_jndiBindings=JNDI Bindings
 subsys_naming_selectedURI=Selected URI:
