--- a/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIMessages.properties
@@ -7,6 +7,7 @@ deleteServerGroupConfirm=Do you want to remove server group {0}?
 deleteServerGroup=Remove Server Group
 deleteJVM=Remove JVM Settings
 deleteJVMConfirm=Really remove the JVM settings?
+common_validation_heapSize=Enter valid heapsize values
 removeProperty=Remove Property
 removePropertyConfirm=Really remove property {0}?
 mustBeDeployableArchive={0} must be a deployable archive file name.
