AS7-4662 Bundle location not reflected in console

--- a/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
+++ b/gui/src/main/java/org/jboss/as/console/client/core/UIConstants.properties
@@ -218,6 +218,7 @@ subsys_naming_jndiView=JNDI View
 subsys_naming_selectedURI=Selected URI:
 subsys_osgi=OSGi Subsystem
 subsys_osgi_bundleID=Bundle ID
+subsys_osgi_bundleLocation=Location
 subsys_osgi_bundleState=State
 subsys_osgi_bundleSymbolicName=Symbolic Name
 subsys_osgi_bundleVersion=Version
